# langchain-trial

./: poetry.toml  pyproject.toml
src/: gradio_app.py
